<?xml version="1.0"?>
<package format="2">
  <name>mitre_fast_layered_map</name>
  <version>0.1.4</version>
  <description>The mitre_fast_layered_map package</description>

  <maintainer email="tbostic@mitre.org">tbostic</maintainer>
  <license>Apache 2.0</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>libpcl-all</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_kdl</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>filters</depend>
  <depend>pluginlib</depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <filters plugin="${prefix}/filter_plugins.xml" />
     <rosdoc config="rosdoc.yaml" />
  </export>
</package>
